# DTI

./: .gitignore  LICENSE  Makefile  README.md  dti.cabal
src/: Main.hs  shell.hs
src/Language/Perl/: Core.hs  Macro.hs  Numeric.hs  Parser.hs  Primitives.hs  Types.hs  Variables.hs
