Name:                dti
Version:             0.1
Synopsis:            A perl-like interpreter.
Description:         Hopefully a nqp interpreter.
License:             MIT
License-file:        LICENSE
Author:              John Harrison
Maintainer:          ash.gti@gmail.com
Category:            Compilers/Interpreters, Language

Build-type:          Simple

Cabal-version:       >=1.4

Library
  Build-Depends:   base >= 4 && < 5, haskell98, array, parsec, containers, mtl, transformers, directory
  Extensions:      ExistentialQuantification
  Hs-Source-Dirs:  src
  Exposed-Modules: Language.Perl.Core
                   Language.Perl.Types
                   Language.Perl.Variables
  Other-Modules:   Language.Perl.Macro
                   Language.Perl.Parser
                   Language.Perl.Numeric
                   Language.Perl.Primitives

Executable dti
  Main-is:             shell.hs
  Hs-Source-Dirs:      src
  Build-depends:       base, parsec, containers, mtl, transformers, haskeline
  